# foxtools

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
conf/: config.ini
foxtools/: segment.py
foxtools/src/: cnn_models.py  decompositions.py  fox_io.py  fox_segment.py  fox_utils.py  train_utils.py  xception_models.py
