[metadata]
name=foxtools
version=1.0.0
author= Elena Aloupogianni
author_email=foxelas@outlook.com
description=Foxelas tool library for image processing
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/foxelas/foxtools
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent